tests/parser/valid/14_return_statements.src
fn id(int x) -> int {
    return x;
}

fn noop() {
    return;
}
