tests/parser/invalid/14_assignment_missing_rhs.src
fn test() {
    int x = 0;
    x = ;
}
